--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="tagline">Pour l'homme conscient, fort dans ses choix et généreux dans ses actions, quelle que soit son origine.</div>
         
         <div class="gift-image-container">
-         <img src="assets/images/cadeau.png" alt="KING 2026" class="gift-image">
+         <img src="assets/images/glow.png" alt="KING 2026" class="gift-image">
         </div>
         
         <div class="progress-container">
