--- a/bonus.html
+++ b/bonus.html
@@ -676,7 +676,7 @@
         </div>
         
         <div class="footer">
-            🌿 Créé avec intention par <strong>KING 2026 Team</strong> – Pour l'homme universel qui choisit d'avancer avec conscience, curiosité et cœur.
+            🌿 Créé avec intention par <strong>Indye Gyal'Z Corporation </strong> – Pour l'homme universel qui choisit d'avancer pour lui et avec conscience.
         </div>
     </div>
 
